--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,72 @@
-body {
-  font-family: 'Roboto', sans-serif;
-  color: #434455;
-  background: #fff;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-/* RESET */
+body {
+  font-family: Roboto, sans-serif;
+  color: #434455;
+  background-color: #ffffff;
+}
+
+.container {
+  max-width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.logo-word {
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #4d5ae5;
+  align-self: center;
+  margin-right: 76px;
+}
+.logo-piece-up {
+  color: #2e2f42;
+}
+.logo-piece-down {
+  color: #f4f4fd;
+}
+
+.container-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.it-is-a-adres,
+.navigation,
+.navigation-list,
+.address-list {
+  display: flex;
+  flex-direction: row;
+}
+
+.navigation {
+  align-items: center;
+}
+
+.navigation-list {
+  gap: 40px;
+}
+
+.container-header {
+  padding: 24px 0;
+}
+
+.address-list {
+  gap: 40px;
+}
+
 h1,
 h2,
 h3,
@@ -15,90 +74,64 @@ h4,
 h5,
 h6,
 p {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
+}
+
+ul,
+ol {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
 }
 
 a {
-  color: currentColor;
   text-decoration: none;
-}
-
-ul {
-  list-style-type: none;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
 }
 
 img {
   display: block;
   max-width: 100%;
-  height: auto;
 }
 
-button {
-  font-family: inherit;
-  color: currentColor;
-  border: none;
+input {
+  border-radius: 4px;
+  border: 1px solid #fcfcfc;
+  padding: 0 16px;
+  color: #fff;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.48px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
 }
 
-.container {
-  width: 1158px;
-  padding: 0 15px;
-  margin: 0 auto;
+input:focus {
+  border-color: #4d5ae5;
 }
 
-.header {
-  padding: 0 15px;
+textarea:focus {
+  border-color: #4d5ae5;
+}
+/*Header*/
+
+.it-is-header {
   border-bottom: 1px solid #e7e9fc;
-  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
-    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
 .container-header {
   display: flex;
-  align-items: center;
-}
-
-/* navigation */
-
-.nav {
-  display: flex;
-  align-items: center;
-}
-
-.logo {
-  display: inline-block;
-  color: #4d5ae5;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  margin-right: 76px;
-  margin-bottom: 16px;
-}
-
-.logo-header {
-  color: #2e2f42;
-}
-
-.nav-list {
-  display: flex;
-  width: 261px;
-  gap: 40px;
-}
-
-.nav-item {
-  position: relative;
+  padding: 0 15px;
 }
 
 .nav-link {
   color: #2e2f42;
+  font-size: 16px;
+  font-style: normal;
   font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.32px;
+  display: block;
   padding: 24px 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -108,111 +141,152 @@ button {
   color: #404bbf;
 }
 
-.nav-link.studio {
-  position: relative;
+/*Active page*/
+.nav-link.current {
   color: #404bbf;
+  display: flex;
+  align-items: center;
+  position: relative;
 }
 
-.nav-link.studio::after {
+.nav-link.current::after {
   content: '';
-  position: absolute;
-  display: block;
-  width: 48px;
+  width: 100%;
   height: 4px;
   border-radius: 2px;
-  background-color: #404bbf;
-  margin-top: 20px;
+  position: absolute;
+  background: currentColor;
   bottom: -1px;
 }
+/*-Active page-*/
 
-.adres {
-  display: flex;
+address {
   font-style: normal;
-  justify-content: flex-end;
-  margin-left: auto;
 }
-
-.adres-list {
-  display: flex;
-}
-
-.adres-item {
-  padding: 24px 0;
-  margin-right: 40px;
-}
-
-.adres-item:last-child {
-  margin-right: 0;
-}
-
-.adres-link {
-  color: #434455;
-  font-weight: 500;
+.contact {
+  color: currentColor;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.32px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.adres-link:hover,
-.adres-link:focus {
+.contact:hover,
+.contact:focus {
   color: #404bbf;
 }
 
-/* HERO */
+.it-is-header {
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+/***********/
+
+/*Main*/
 
 .hero {
-  max-width: 1440px;
-  margin: 0 auto;
-  background-color: #2e2f42;
   padding: 188px 0;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/people-office-1.jpg);
-
+    url(../images/hero_image.jpg);
   background-repeat: no-repeat;
-  background-position: center;
   background-size: cover;
-}
-
-.title {
-  display: block;
-  max-width: 496px;
+  background-position: center;
+  max-width: 1440px;
   margin-right: auto;
   margin-left: auto;
+}
+
+.hero-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hero-text {
   color: #fff;
+  text-align: center;
   font-size: 56px;
   font-weight: 700;
   line-height: 1.07;
-  letter-spacing: 0.02em;
-  text-align: center;
+  letter-spacing: 1.12px;
+  margin-bottom: 48px;
+  max-width: 496px;
 }
 
-.btn {
+.hero-button {
   display: block;
+  margin: 0 auto;
   min-width: 169px;
+  height: 56px;
+  background-color: #4d5ae5;
+  font-family: Roboto, sans-serif;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0.64px;
+  cursor: pointer;
   padding: 16px 32px;
   border-radius: 4px;
-  margin-top: 48px;
-  margin-right: auto;
-  margin-left: auto;
-  color: #fff;
-  background-color: #4d5ae5;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  cursor: pointer;
+  border: none;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.btn:hover,
-.btn:focus {
+.hero-button:hover,
+.hero-button:focus {
   background-color: #404bbf;
 }
 
-/* Capabilities */
-
-.section {
+.topics {
   padding: 120px 0;
+}
+
+.icon-place {
+  margin-bottom: 8px;
+  padding: 24px 0;
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  background: #f4f4fd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 112px;
+}
+
+.advantages-list {
+  display: flex;
+  gap: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+}
+
+.mini-topic {
+  margin-bottom: 8px;
+}
+
+.advantages-topics {
+  margin: 0;
+  padding: 0;
+  width: calc((100% - 72px) / 4);
+}
+
+.visually-hidden,
+.team-text,
+.portfolio {
+  color: #2e2f42;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
 }
 
 .visually-hidden {
@@ -222,270 +296,519 @@ button {
   margin: -1px;
   border: 0;
   padding: 0;
-
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
 
-.list {
-  display: flex;
-}
-
-.item-feature {
-  width: calc((100% - 72px) / 4);
-  margin-right: 24px;
-}
-
-.item-feature:last-child {
-  margin-right: 0;
-}
-
-.strategic-box {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 264px;
-  height: 112px;
-  flex-shrink: 0;
-  border: 1px solid #8e8f99;
-  border-radius: 4px;
-  background-color: #f4f4fd;
-  position: relative;
-  margin-bottom: 8px;
-}
-
-.title-secondary {
+.mini-topic,
+.human-worker,
+.name-thing {
   color: #2e2f42;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  text-align: center;
-  margin-bottom: 72px;
-}
-
-.title-tertiary {
-  color: #2e2f42;
-  font-weight: 500;
   font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  margin-bottom: 8px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.4px;
 }
 
-.text {
-  display: inline-block;
+.exp-text,
+.profesional,
+.portfolio-text {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.32px;
 }
-
-/* team */
 
 .team {
-  padding: 120px 0;
   background-color: #f4f4fd;
+  padding: 120px 0;
+}
+
+.team-text {
+  margin-bottom: 72px;
 }
 
 .team-list {
   display: flex;
+  gap: 24px;
+  justify-content: center;
 }
 
-.team-item {
-  margin-right: 24px;
-  width: calc((100% - 72px) / 4);
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
-  background-color: #ffffff;
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
-    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+.human-worker {
+  margin-bottom: 8px;
+  text-align: center;
 }
-
-.team-item:last-child {
-  margin-right: 0;
-}
-
-/* card woker */
-
-.card-worker {
-  padding: 32px 0;
-}
-
-.team-title {
-  color: #2e2f42;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
+.profesional {
   text-align: center;
   margin-bottom: 8px;
 }
 
-.team-text {
-  text-align: center;
+.worker-text {
+  padding: 32px 0;
 }
 
-.socials-list {
+.social-list {
   display: flex;
-  width: 232px;
-  gap: 24px;
-  margin-top: 8px;
-  margin-left: 16px;
   justify-content: center;
+  gap: 24px;
 }
 
-.socials-link {
-  display: flex;
+.social-media-worker-link {
+  width: 100%;
+  height: 100%;
+}
+
+.social-media-worker-link {
+  background-color: #4d5ae5;
   width: 40px;
   height: 40px;
-  align-items: center;
-  justify-content: center;
   border-radius: 50%;
-  background-color: #4d5ae5;
-  position: relative;
-  color: #f4f4fd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.socials-link:hover,
-.socials-link:focus {
+.social-media-worker-link:focus,
+.social-media-worker-link:hover {
   background-color: #404bbf;
 }
 
-.social-icon {
-  position: absolute;
-  fill: currentColor;
+.worker {
+  border-radius: 0px 0px 4px 4px;
+  background: #fff;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  width: calc((100% - 72px) / 4);
 }
 
-/* end card woker */
+.icon-worker-media {
+  fill: #f4f4fd;
+}
 
-/* portfolio*/
+.portfolio-page {
+  padding: 120px 0;
+}
 
 .portfolio {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  margin-bottom: 72px;
 }
 
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  column-gap: 24px;
+  gap: 24px;
   row-gap: 48px;
 }
 
 .portfolio-item {
   width: calc((100% - 48px) / 3);
-  background-color: #ffffff;
-  border: 1px solid #f4f4fd;
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
-    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.overlay-box {
+.portfolio-text-together {
+  border: 1px solid #e7e9fc;
+  border-top: 0;
+  background: #fff;
+  padding: 32px 16px;
+}
+
+.name-thing {
+  margin-bottom: 8px;
+}
+
+.box-for-overlay {
   position: relative;
   overflow: hidden;
 }
 
-.overlay-text {
+.paragraf-for-overlay {
+  color: #f4f4fd;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  padding: 40px 32px;
   position: absolute;
   top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  padding: 40px 32px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
   background-color: #4d5ae5;
+  width: 100%;
+  height: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover .overlay-text {
+.portfolio-item:hover .paragraf-for-overlay {
   transform: translateY(0%);
 }
 
-.portfolio-img {
-  overflow: hidden;
+.portfolio-item:hover {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
-.iner-two {
-  padding: 32px 16px;
-  border: 1px solid #e7e9fc;
-  border-top: none;
-}
+/******  *****/
 
-.portfolio-title {
-  color: #2e2f42;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  margin-bottom: 8px;
-}
-
-/* FOOTER */
-
-.footer {
-  padding: 100px 0;
+/*Fotter*/
+.this-is-footi {
   background-color: #2e2f42;
+  padding: 100px 0;
 }
 
-.container-footer {
+.container.down-container {
   display: flex;
-
   align-items: baseline;
 }
 
-.box-logo-footer {
+.logo-part {
   margin-right: 120px;
 }
 
-.logo-footer {
-  color: #f4f4fd;
-  font-weight: 700;
-  line-height: 1.17;
+.footer-social-media {
+  margin-right: 80px;
 }
 
-.footer-text {
-  display: flex;
-  max-width: 264px;
-  color: #f4f4fd;
-}
-
-.footer-socials-title {
-  font-weight: 500;
-  color: #fff;
+.down-word {
+  display: inline-block;
   margin-bottom: 16px;
 }
 
-.footer-socials-list {
+.down-text {
+  color: #f4f4fd;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.32px;
+  max-width: 264px;
+}
+
+.text-social {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  margin-bottom: 16px;
+}
+
+.social-list.down-links {
   display: flex;
-  width: 208px;
   gap: 16px;
 }
 
-.footer-socials-link {
+.social-media-worker-link.down-green {
   display: flex;
-  width: 40px;
-  height: 40px;
   justify-content: center;
   align-items: center;
-  border-radius: 50%;
+}
+
+.social-media-worker-link.down-green:focus,
+.social-media-worker-link.down-green:hover {
+  background-color: #31d0aa;
+}
+
+.input-with-but {
+  display: flex;
+  gap: 24px;
+}
+
+.footer-input {
+  width: 264px;
+  height: 40px;
+  border-color: #fff;
+  background-color: transparent;
+  outline: 0;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  color: #fff;
+}
+
+.footer-input::placeholder {
+  color: #fff;
+}
+.footer-input:focus {
+  border-color: #4d5ae5;
+}
+
+.footer-but {
+  min-width: 165px;
+  height: 40px;
+
+  color: #fff;
+  /* font-family: Roboto; */
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.64px;
+  border: none;
+  border-radius: 4px;
   background-color: #4d5ae5;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-but:hover,
+.footer-but:focus {
+  background-color: #404bbf;
+}
+
+.button-icon-plane {
+  fill: #ffffff;
+  margin-left: 16px;
+}
+
+/*viewport and form*/
+.place-for-form {
+  position: fixed;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.place-for-form.is-open {
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(46, 47, 66, 0.4);
+}
+
+.form-leave {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  display: flex;
+  flex-direction: column;
+  padding: 72px 24px 24px 24px;
+  width: 408px;
+  min-height: 584px;
+  border-radius: 4px;
+  background: #fcfcfc;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.circle-for-cross {
+  position: absolute;
+  padding: 0;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  align-self: flex-end;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.circle-for-cross:hover,
+.circle-for-cross:focus {
+  background-color: #404bbf;
+  border: none;
+}
+
+.cross {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.circle-for-cross:hover .cross,
+.circle-for-cross:focus .cross {
+  fill: #ffffff;
+}
+
+.leave-legend {
+  color: #2e2f42;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  max-width: 360px;
+  margin-bottom: 16px;
+}
+
+label {
+  color: #8e8f99;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.48px;
+}
+
+.input-in-form {
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  color: #2e2f42;
   position: relative;
-  color: #f4f4fd;
+  display: block;
+  width: 100%;
+  height: 40px;
+
+  padding-left: 38px;
+}
+/*  */
+.label-for-form {
+  display: block;
+  margin-bottom: 4px;
+}
+
+.special-for {
+  position: relative;
+}
+
+.div-for {
+  position: relative;
+  margin-bottom: 8px;
+}
+
+.div-for-area {
+  margin-bottom: 16px;
+  padding: 0;
+}
+
+.icons-input-for {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 16px;
+}
+
+/*  */
+/*  */
+
+.input-in-form {
+  height: 40px;
+  width: 360px;
+}
+/*  */
+.textarea-in-form {
+  background-color: transparent;
+  width: 100%;
+  display: block;
+  height: 120px;
+  resize: none;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  padding: 8px 16px;
+  color: rgba(46, 47, 66, 0.4);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.48px;
+
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.textarea-in-form::placeholder {
+  color: rgba(46, 47, 66, 0.4);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.48px;
+}
+
+.check-n-text {
+  display: flex;
+  margin-bottom: 24px;
+}
+
+.form-text-privacy {
+  color: #8e8f99;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.48px;
+}
+
+.form-link-privacy {
+  color: #4d5ae5;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.48px;
+  text-decoration-line: underline;
+}
+
+.like-check {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  fill: transparent;
+  margin-right: 8px;
+}
+
+.yes-icon {
+  fill: none;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.check-priv:checked + .form-text-privacy .like-check {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+
+.check-priv:checked + .form-text-privacy .like-check .yes-icon {
+  fill: #f4f4fd;
+}
+
+.send-btn {
+  display: block;
+  padding: 16px 32px;
+  min-width: 169px;
+  margin: 0 auto;
+  border: none;
+  border-radius: 4px;
+  background: #4d5ae5;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.64px;
+
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer .socials-link:hover,
-.footer .socials-link:focus {
-  background-color: #31d0aa;
+.send-btn:hover,
+.send-btn:focus {
+  background-color: #404bbf;
 }
+
+.icons-input-for {
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-in-form:focus + .icons-input-for {
+  fill: #4d5ae5;
+}
+/***********/
