--- a/css/styles.css
+++ b/css/styles.css
@@ -192,7 +192,7 @@ address {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/hero_image.jpg);
+    url(../images/people-office-1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
